syntax="proto3";
package token;

service TokenHandler {
	rpc Hello(Request) returns (Response);
	rpc ValidateToken (PayloadValidate) returns (ResponseValidation);
}

message Request {
    string Message=1;
}

message Response {
	string Message=1;
}

// Validate token payload
message PayloadValidate {
    string Token = 1;
}

message ResponseValidation {
    bool Success = 1;
	message ClaimData {
		string Audience = 1;
		int64 ExpiresAt = 2;
		int64 IssuedAt = 3;
		string Issuer = 4;
		int64 NotBefore = 5;
		string Subject = 6;
		string DeviceID = 7;
		message UserData {
			string ID = 1;
		}
		UserData User = 8;
	}
	ClaimData Claim = 2;
}